Exercise toolbar has been moved to the separate component.

--- a/mobile/app/assets/i18n/en.json
+++ b/mobile/app/assets/i18n/en.json
@@ -4,7 +4,7 @@
     "TAB_TITLE_EXERCISES": "Exercises",
     "TAB_TITLE_STATS": "Stats",
     
-    "NAVBAR_TITLE_EXERCISES": "Exercises",
+    "NAVBAR_APP_NAME": "Workouts Log",
     "NAVBAR_SEARCH_PLACEHOLDER": "Search",
     
     "TYPE_ANAEROBIC": "anaerobic",
