--- a/mobile/app/assets/i18n/ru.json
+++ b/mobile/app/assets/i18n/ru.json
@@ -3,7 +3,7 @@
     "TAB_TITLE_EXERCISES": "Упражнения",
     "TAB_TITLE_STATS": "Статистика",
     
-    "NAVBAR_TITLE_EXERCISES": "Упражнения",
+    "NAVBAR_APP_NAME": "ЗОЖыч",
     "NAVBAR_SEARCH_PLACEHOLDER": "Поиск",
     
     "TYPE_ANAEROBIC": "анаэробное",
