--- a/mobile/app/assets/i18n/en.json
+++ b/mobile/app/assets/i18n/en.json
@@ -57,6 +57,6 @@
     "EXERCISES_FILTER_MUSCLES": "Muscles",
     "EXERCISES_FILTER_TYPES": "Exercises type",
     "EXERCISES_FILTER_MECHANICS": "Mechanics",
-    "EXERCISES_FILTER_RESET": "Reset to default"
+    "EXERCISES_FILTER_RESET": "Reset"
     
 }
