--- a/mobile/app/assets/i18n/ru.json
+++ b/mobile/app/assets/i18n/ru.json
@@ -75,6 +75,7 @@
     "WORKOUT_ONE_TIME_DATE": "Дата",
     "WORKOUT_PERIODIC_FIRST_DATE": "Дата первой тренировки",
     "WORKOUT_EXERCISES": "Упражнения",
+    "WORKOUT_EXERCISES_SELECTION_TOOLBAT_TITLE": "Выбор упражнений",
 
     "WORKOUT_COMPLETE_ACTIONS_TITLE": "Завершение создания тренировки",
     "WORKOUT_COMPLETE_START_WORKOUT": "Начать тренировку",
