Continue implementation of the workouts records population.

--- a/mobile/app/assets/i18n/en.json
+++ b/mobile/app/assets/i18n/en.json
@@ -89,5 +89,55 @@
     "WORKOUT_TEMPLATE_ACTIONS_DELETE_CURRENT": "Delete only current workout",   
     "WORKOUT_TEMPLATE_ACTIONS_EDIT_ALL": "Edit all workouts of this type",
     "WORKOUT_TEMPLATE_ACTIONS_DELETE_ALL": "Delete all workouts of this type",
-    "WORKOUT_TEMPLATE_ACTIONS_CANCEL": "Cancel"
+    "WORKOUT_TEMPLATE_ACTIONS_CANCEL": "Cancel",
+
+    "SHORT_METRIC_MM": "mm",
+    "SHORT_METRIC_CM": "cm",
+    "SHORT_METRIC_M": "m",
+    "SHORT_METRIC_KM": "km",
+    "SHORT_METRIC_IN": "in",
+    "SHORT_METRIC_YD": "yd",
+    "SHORT_METRIC_MI": "mi",
+    "SHORT_METRIC_G": "g",
+    "SHORT_METRIC_KG": "kg",
+    "SHORT_METRIC_T": "t",
+    "SHORT_METRIC_OZ": "oz",
+    "SHORT_METRIC_LB": "lb",
+    "SHORT_METRIC_REPS": "reps",
+    "SHORT_METRIC_MS": "ms",
+    "SHORT_METRIC_SEC": "sec",
+    "SHORT_METRIC_MIN": "min",
+    "SHORT_METRIC_HR": "hr",
+    "SHORT_METRIC_D": "d",
+    "SHORT_METRIC_LVL": "lvl",
+
+    "FULL_METRIC_MM": "Millimetres",
+    "FULL_METRIC_CM": "Centimetres",
+    "FULL_METRIC_M": "Metres",
+    "FULL_METRIC_KM": "Kilometres",
+    "FULL_METRIC_IN": "Inches",
+    "FULL_METRIC_YD": "Yards",
+    "FULL_METRIC_MI": "Miles",
+    "FULL_METRIC_G": "grams",
+    "FULL_METRIC_KG": "kilograms",
+    "FULL_METRIC_T": "Tons",
+    "FULL_METRIC_OZ": "Ounces",
+    "FULL_METRIC_LB": "Pounds",
+    "FULL_METRIC_REPS": "Repetitions",
+    "FULL_METRIC_MS": "Milliseconds",
+    "FULL_METRIC_SEC": "Seconds",
+    "FULL_METRIC_MIN": "Minutes",
+    "FULL_METRIC_HR": "Hours",
+    "FULL_METRIC_D": "Days",
+    "FULL_METRIC_LVL": "Levels",
+
+    "METRIC_CATEGORY_DISTANCE": "Distance",
+    "METRIC_CATEGORY_WEIGHT": "Weight",
+    "METRIC_CATEGORY_REPETITION": "Repetition",
+    "METRIC_CATEGORY_DURATION": "Duration",
+    "METRIC_CATEGORY_LEVEL": "Level",
+
+    "METRIC_CATEGORY_DISTANCE_SELECTION_LABEL": "Distance units",
+    "METRIC_CATEGORY_WEIGHT_SELECTION_LABEL": "Weight units",
+    "METRIC_CATEGORY_DURATION_SELECTION_LABEL": "Duration units"
 }
