--- a/mobile/app/assets/i18n/ru.json
+++ b/mobile/app/assets/i18n/ru.json
@@ -89,5 +89,55 @@
     "WORKOUT_TEMPLATE_ACTIONS_DELETE_CURRENT": "Удаление текущей тренировки",   
     "WORKOUT_TEMPLATE_ACTIONS_EDIT_ALL": "Редактирование всех тренировок данного типа",
     "WORKOUT_TEMPLATE_ACTIONS_DELETE_ALL": "Удаление всех тренировок данного типа",
-    "WORKOUT_TEMPLATE_ACTIONS_CANCEL": "Отмена"
+    "WORKOUT_TEMPLATE_ACTIONS_CANCEL": "Отмена",
+
+    "SHORT_METRIC_MM": "мм",
+    "SHORT_METRIC_CM": "см",
+    "SHORT_METRIC_M": "м",
+    "SHORT_METRIC_KM": "км",
+    "SHORT_METRIC_IN": "дм",
+    "SHORT_METRIC_YD": "ярд",
+    "SHORT_METRIC_MI": "ми",
+    "SHORT_METRIC_G": "гр",
+    "SHORT_METRIC_KG": "кг",
+    "SHORT_METRIC_T": "т",
+    "SHORT_METRIC_OZ": "унц",
+    "SHORT_METRIC_LB": "фнт",
+    "SHORT_METRIC_REPS": "повт",
+    "SHORT_METRIC_MS": "мс",
+    "SHORT_METRIC_SEC": "сек",
+    "SHORT_METRIC_MIN": "мин",
+    "SHORT_METRIC_HR": "ч",
+    "SHORT_METRIC_D": "дн",
+    "SHORT_METRIC_LVL": "урн",
+
+    "FULL_METRIC_MM": "Миллиметры",
+    "FULL_METRIC_CM": "Сантиметры",
+    "FULL_METRIC_M": "Метры",
+    "FULL_METRIC_KM": "Километры",
+    "FULL_METRIC_IN": "Дюймы",
+    "FULL_METRIC_YD": "Ярды",
+    "FULL_METRIC_MI": "Мили",
+    "FULL_METRIC_G": "Граммы",
+    "FULL_METRIC_KG": "Килограмы",
+    "FULL_METRIC_T": "Тонны",
+    "FULL_METRIC_OZ": "Унции",
+    "FULL_METRIC_LB": "Фунты",
+    "FULL_METRIC_REPS": "Повторения",
+    "FULL_METRIC_MS": "Миллисекунды",
+    "FULL_METRIC_SEC": "Секунды",
+    "FULL_METRIC_MIN": "Минуты",
+    "FULL_METRIC_HR": "Часы",
+    "FULL_METRIC_D": "Дни",
+    "FULL_METRIC_LVL": "Уровни",
+    
+    "METRIC_CATEGORY_DISTANCE": "Расстояние",
+    "METRIC_CATEGORY_WEIGHT": "Вес",
+    "METRIC_CATEGORY_REPETITION": "Повторения",
+    "METRIC_CATEGORY_DURATION": "Продолжительность",
+    "METRIC_CATEGORY_LEVEL": "Уровень",
+
+    "METRIC_CATEGORY_SELECTION_LABEL_DISTANCE": "Единицы измерения расстояния",
+    "METRIC_CATEGORY_SELECTION_LABEL_WEIGHT": "Единицы измерения веса",
+    "METRIC_CATEGORY_SELECTION_LABEL_DURATION": "Единицы измерения времени"
 }
